# interview-test-points

./: README.md
coder-a/input_data/: PlanePoints.csv  Points.csv
coder-a/source/: CMakeLists.txt  test.cpp  test.h
coder-b/: CMakeLists.txt  Plane.cpp  Plane.h  Vector3D.cpp  Vector3D.h  main.cpp
